// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AugmentedCreationDemo Snapshot matches snapshot in initial state 1`] = `
<div
  class="max-w-4xl mx-auto p-6 bg-white rounded-lg shadow-lg"
>
  <header
    class="mb-6"
  >
    <h2
      class="text-2xl font-bold text-gray-900 mb-2"
    >
      AI Creative Assistant
    </h2>
    <p
      class="text-gray-600"
    >
      Collaborate with AI to enhance your creative process
    </p>
  </header>
  <div
    class="flex mb-4 space-x-1 bg-gray-100 rounded-lg p-1"
  >
    <button
      class="flex-1 py-2 px-4 rounded-md transition-colors bg-white text-blue-600 shadow-sm"
    >
      Write
    </button>
    <button
      class="flex-1 py-2 px-4 rounded-md transition-colors text-gray-600 hover:text-gray-900"
    >
      Design
    </button>
    <button
      class="flex-1 py-2 px-4 rounded-md transition-colors text-gray-600 hover:text-gray-900"
    >
      Code
    </button>
  </div>
  <div
    class="grid grid-cols-1 lg:grid-cols-3 gap-6"
  >
    <div
      class="lg:col-span-2"
    >
      <div
        class="border border-gray-200 rounded-lg overflow-hidden"
      >
        <div
          class="bg-gray-50 px-4 py-2 border-b border-gray-200 flex justify-between items-center"
        >
          <span
            class="text-sm font-medium text-gray-700"
          >
            Creative Canvas
          </span>
          <button
            class="text-xs px-3 py-1 bg-gray-200 text-gray-600 rounded hover:bg-gray-300 disabled:opacity-50 disabled:cursor-not-allowed"
            disabled=""
          >
            Undo
          </button>
        </div>
        <textarea
          class="w-full p-4 h-64 resize-none focus:outline-none focus:ring-2 focus:ring-blue-500"
          placeholder="Start creating... AI will suggest improvements as you work"
        />
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="bg-blue-50 rounded-lg p-4"
      >
        <h3
          class="font-semibold text-blue-900 mb-3 flex items-center"
        >
          <svg
            class="w-5 h-5 mr-2"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          AI Suggestions
        </h3>
        <p
          class="text-blue-700 text-sm"
        >
          Start typing to get AI-powered creative suggestions
        </p>
      </div>
      <div
        class="bg-gray-50 rounded-lg p-4"
      >
        <h3
          class="font-semibold text-gray-900 mb-3"
        >
          Session Stats
        </h3>
        <div
          class="space-y-2 text-sm"
        >
          <div
            class="flex justify-between"
          >
            <span
              class="text-gray-600"
            >
              Words:
            </span>
            <span
              class="font-medium"
            >
              0
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-gray-600"
            >
              Characters:
            </span>
            <span
              class="font-medium"
            >
              0
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-gray-600"
            >
              History:
            </span>
            <span
              class="font-medium"
            >
              0
               changes
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AugmentedCreationDemo Snapshot matches snapshot with content 1`] = `
<div
  class="max-w-4xl mx-auto p-6 bg-white rounded-lg shadow-lg"
>
  <header
    class="mb-6"
  >
    <h2
      class="text-2xl font-bold text-gray-900 mb-2"
    >
      AI Creative Assistant
    </h2>
    <p
      class="text-gray-600"
    >
      Collaborate with AI to enhance your creative process
    </p>
  </header>
  <div
    class="flex mb-4 space-x-1 bg-gray-100 rounded-lg p-1"
  >
    <button
      class="flex-1 py-2 px-4 rounded-md transition-colors bg-white text-blue-600 shadow-sm"
    >
      Write
    </button>
    <button
      class="flex-1 py-2 px-4 rounded-md transition-colors text-gray-600 hover:text-gray-900"
    >
      Design
    </button>
    <button
      class="flex-1 py-2 px-4 rounded-md transition-colors text-gray-600 hover:text-gray-900"
    >
      Code
    </button>
  </div>
  <div
    class="grid grid-cols-1 lg:grid-cols-3 gap-6"
  >
    <div
      class="lg:col-span-2"
    >
      <div
        class="border border-gray-200 rounded-lg overflow-hidden"
      >
        <div
          class="bg-gray-50 px-4 py-2 border-b border-gray-200 flex justify-between items-center"
        >
          <span
            class="text-sm font-medium text-gray-700"
          >
            Creative Canvas
          </span>
          <button
            class="text-xs px-3 py-1 bg-gray-200 text-gray-600 rounded hover:bg-gray-300 disabled:opacity-50 disabled:cursor-not-allowed"
            disabled=""
          >
            Undo
          </button>
        </div>
        <textarea
          class="w-full p-4 h-64 resize-none focus:outline-none focus:ring-2 focus:ring-blue-500"
          placeholder="Start creating... AI will suggest improvements as you work"
        >
          Sample content
        </textarea>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="bg-blue-50 rounded-lg p-4"
      >
        <h3
          class="font-semibold text-blue-900 mb-3 flex items-center"
        >
          <svg
            class="w-5 h-5 mr-2"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          AI Suggestions
        </h3>
        <p
          class="text-blue-700 text-sm"
        >
          Start typing to get AI-powered creative suggestions
        </p>
      </div>
      <div
        class="bg-gray-50 rounded-lg p-4"
      >
        <h3
          class="font-semibold text-gray-900 mb-3"
        >
          Session Stats
        </h3>
        <div
          class="space-y-2 text-sm"
        >
          <div
            class="flex justify-between"
          >
            <span
              class="text-gray-600"
            >
              Words:
            </span>
            <span
              class="font-medium"
            >
              2
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-gray-600"
            >
              Characters:
            </span>
            <span
              class="font-medium"
            >
              14
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-gray-600"
            >
              History:
            </span>
            <span
              class="font-medium"
            >
              0
               changes
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AugmentedCreationDemo Snapshot matches snapshot with different tab selected 1`] = `
<div
  class="max-w-4xl mx-auto p-6 bg-white rounded-lg shadow-lg"
>
  <header
    class="mb-6"
  >
    <h2
      class="text-2xl font-bold text-gray-900 mb-2"
    >
      AI Creative Assistant
    </h2>
    <p
      class="text-gray-600"
    >
      Collaborate with AI to enhance your creative process
    </p>
  </header>
  <div
    class="flex mb-4 space-x-1 bg-gray-100 rounded-lg p-1"
  >
    <button
      class="flex-1 py-2 px-4 rounded-md transition-colors text-gray-600 hover:text-gray-900"
    >
      Write
    </button>
    <button
      class="flex-1 py-2 px-4 rounded-md transition-colors bg-white text-blue-600 shadow-sm"
    >
      Design
    </button>
    <button
      class="flex-1 py-2 px-4 rounded-md transition-colors text-gray-600 hover:text-gray-900"
    >
      Code
    </button>
  </div>
  <div
    class="grid grid-cols-1 lg:grid-cols-3 gap-6"
  >
    <div
      class="lg:col-span-2"
    >
      <div
        class="border border-gray-200 rounded-lg overflow-hidden"
      >
        <div
          class="bg-gray-50 px-4 py-2 border-b border-gray-200 flex justify-between items-center"
        >
          <span
            class="text-sm font-medium text-gray-700"
          >
            Creative Canvas
          </span>
          <button
            class="text-xs px-3 py-1 bg-gray-200 text-gray-600 rounded hover:bg-gray-300 disabled:opacity-50 disabled:cursor-not-allowed"
            disabled=""
          >
            Undo
          </button>
        </div>
        <textarea
          class="w-full p-4 h-64 resize-none focus:outline-none focus:ring-2 focus:ring-blue-500"
          placeholder="Start creating... AI will suggest improvements as you work"
        />
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="bg-blue-50 rounded-lg p-4"
      >
        <h3
          class="font-semibold text-blue-900 mb-3 flex items-center"
        >
          <svg
            class="w-5 h-5 mr-2"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          AI Suggestions
        </h3>
        <p
          class="text-blue-700 text-sm"
        >
          Start typing to get AI-powered creative suggestions
        </p>
      </div>
      <div
        class="bg-gray-50 rounded-lg p-4"
      >
        <h3
          class="font-semibold text-gray-900 mb-3"
        >
          Session Stats
        </h3>
        <div
          class="space-y-2 text-sm"
        >
          <div
            class="flex justify-between"
          >
            <span
              class="text-gray-600"
            >
              Words:
            </span>
            <span
              class="font-medium"
            >
              0
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-gray-600"
            >
              Characters:
            </span>
            <span
              class="font-medium"
            >
              0
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-gray-600"
            >
              History:
            </span>
            <span
              class="font-medium"
            >
              0
               changes
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
